DevOrg/src/objects/Employee_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Acoount_Number__c</fullName>
        <label>Acoount Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Id</label>
        <referenceTo>IBMEmp__c</referenceTo>
        <relationshipLabel>Employee Details</relationshipLabel>
        <relationshipName>Employee_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Employee Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>